Remove link externo do Service Desk para resolver alerta de segurança

--- a/Staticwebapp.config
+++ b/Staticwebapp.config
@@ -5,9 +5,13 @@
     "X-XSS-Protection": "1; mode=block",
     "Referrer-Policy": "strict-origin-when-cross-origin",
     "Permissions-Policy": "geolocation=(), microphone=(), camera=()",
-    "Content-Security-Policy": "default-src 'self' 'unsafe-inline' https://clouddatacomvc.atlassian.net; img-src 'self' data: https:; font-src 'self' data:; style-src 'self' 'unsafe-inline';"
+    "Content-Security-Policy": "default-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; style-src 'self' 'unsafe-inline';"
   },
   "routes": [
+    {
+      "route": "/.well-known/security.txt",
+      "rewrite": "/security.txt"
+    },
     {
       "route": "/*",
       "headers": {
