Resolve soft 404 com dados estruturados e sitemap

--- a/Staticwebapp.config
+++ b/Staticwebapp.config
@@ -13,6 +13,19 @@
       "rewrite": "/security.txt"
     },
     {
+      "route": "/sitemap.xml",
+      "headers": {
+        "Content-Type": "application/xml"
+      }
+    },
+    {
+      "route": "/",
+      "headers": {
+        "Cache-Control": "public, max-age=3600"
+      },
+      "statusCode": 200
+    },
+    {
       "route": "/*",
       "headers": {
         "Strict-Transport-Security": "max-age=31536000; includeSubDomains"
