Corrige staticwebapp.config.json - remove statusCode de rotas com rewrite

--- a/Staticwebapp.config
+++ b/Staticwebapp.config
@@ -19,17 +19,82 @@
       }
     },
     {
-      "route": "/",
+      "route": "/robots.txt",
+      "headers": {
+        "Content-Type": "text/plain"
+      }
+    },
+    {
+      "route": "/ico-clouddata-02.ico",
+      "headers": {
+        "Content-Type": "image/x-icon",
+        "Cache-Control": "public, max-age=86400"
+      }
+    },
+    {
+      "route": "/18 1.png",
+      "headers": {
+        "Content-Type": "image/png",
+        "Cache-Control": "public, max-age=86400"
+      }
+    },
+    {
+      "route": "/wp-admin/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/wp-content/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/wp-includes/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/wp-login.php",
+      "statusCode": 410
+    },
+    {
+      "route": "/xmlrpc.php",
+      "statusCode": 410
+    },
+    {
+      "route": "/*.php",
+      "statusCode": 410
+    },
+    {
+      "route": "/uploads/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/blog/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/categoria/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/category/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/author/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/tag/*",
+      "statusCode": 410
+    },
+    {
+      "route": "/index.html",
       "headers": {
         "Cache-Control": "public, max-age=3600"
-      },
-      "statusCode": 200
+      }
     },
     {
       "route": "/*",
-      "headers": {
-        "Strict-Transport-Security": "max-age=31536000; includeSubDomains"
-      }
+      "rewrite": "/index.html"
     }
   ],
   "navigationFallback": {
